--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
-Package: tunevt
-Title: Fit and Tune Virtual Twins Models to Detect Heterogeneous Effects
+Package: tehtuner
+Title: Fit and Tune Models to Detect Treatment Effect Heterogeneity
 Version: 0.0.0.9000
 Authors@R: 
     person(given = "Jack",
@@ -18,7 +18,7 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 Depends: 
-    R (>= 2.10)
+    R (>= 3.5.0)
 Imports: 
     party,
     glmnet,
@@ -32,5 +32,5 @@ RdMacros: Rdpack
 Suggests: 
     spelling
 Language: en-US
-URL: https://github.com/jackmwolf/tunevt
-BugReports: https://github.com/jackmwolf/tunevt/issues
+URL: https://github.com/jackmwolf/tehtuner
+BugReports: https://github.com/jackmwolf/tehtuner/issues
