Bug fixes related to variable names - tunevt() previously errored out if the   outcome was not named "Y" and the treatment   indicator was not "Trt". All functions now   appropriately use the input Y and Trt labels. - Citation update for Wolf et al. 2022 - Version -> 0.0.1.9000

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(tunevt)
 import(SuperLearner)
+importFrom(Rdpack,reprompt)
 importFrom(earth,earth)
 importFrom(glmnet,cv.glmnet)
 importFrom(glmnet,glmnet)
