--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,9 +9,11 @@ Authors@R:
            comment = c(ORCID = "0000-0002-8919-8740"))
 Description: Implements methods to fit Virtual Twins models (Foster et al. 
   (2011) <doi:10.1002/sim.4322>) for identifying subgroups with differential
-  effects in the context of clinical trials while controlling the Type I error
+  effects in the context of clinical trials while controlling the probability
   of falsely detecting a differential effect when the conditional average
-  treatment effect is uniform across the study population.
+  treatment effect is uniform across the study population using parameter
+  selection methods proposed in Wolf et al. (2022) 
+  <doi:10.1177/17407745221095855>.
 License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
