Parallelize tune_theta Addresses #1

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,7 +29,8 @@ Imports:
     stringr,
     SuperLearner,
     randomForestSRC,
-    earth
+    earth,
+    foreach
 RdMacros: Rdpack
 Suggests: 
     spelling,
