--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ export(tunevt)
 import(SuperLearner)
 importFrom(Rdpack,reprompt)
 importFrom(earth,earth)
+importFrom(foreach,`%dopar%`)
+importFrom(foreach,foreach)
 importFrom(glmnet,cv.glmnet)
 importFrom(glmnet,glmnet)
 importFrom(party,ctree)
