--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,9 +33,12 @@ Imports:
     foreach
 RdMacros: Rdpack
 Suggests: 
+    knitr,
+    rmarkdown,
     spelling,
     testthat (>= 3.0.0)
 Language: en-US
 URL: https://github.com/jackmwolf/tehtuner
 BugReports: https://github.com/jackmwolf/tehtuner/issues
 Config/testthat/edition: 3
+VignetteBuilder: knitr
